--- a/Tsvetkov/lab2/ltr/ltr.vcxproj
+++ b/Tsvetkov/lab2/ltr/ltr.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Navigator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ItrLTR.h" />
