modified all Itr

--- a/Tsvetkov/lab2/ltr/ltr.vcxproj.filters
+++ b/Tsvetkov/lab2/ltr/ltr.vcxproj.filters
@@ -21,6 +21,15 @@
     <ClCompile Include="Navigator.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Itr.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="ItrLTR.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="ItrRTL.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Itr.h">
