--- a/Tsvetkov/lab2/ltr/ltr.vcxproj
+++ b/Tsvetkov/lab2/ltr/ltr.vcxproj
@@ -139,6 +139,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Itr.cpp" />
+    <ClCompile Include="ItrLTR.cpp" />
+    <ClCompile Include="ItrRTL.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Navigator.cpp" />
   </ItemGroup>
