--- a/Tsvetkov/lab2/ltr/ltr.vcxproj
+++ b/Tsvetkov/lab2/ltr/ltr.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="Navigator.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="stack.h" />
+    <ClInclude Include="Print.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
