--- a/Tsvetkov/lab2/ltr/ltr.vcxproj.filters
+++ b/Tsvetkov/lab2/ltr/ltr.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="stack.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Print.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
