--- a/SirotinD/mp2-lab4-Polynoms/Polynoms/Polynoms/Polynoms.vcxproj.filters
+++ b/SirotinD/mp2-lab4-Polynoms/Polynoms/Polynoms/Polynoms.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Iterator.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Monom.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
