--- a/SirotinD/mp2-lab4-Polynoms/Polynoms/Polynoms/Polynoms.vcxproj
+++ b/SirotinD/mp2-lab4-Polynoms/Polynoms/Polynoms/Polynoms.vcxproj
@@ -119,6 +119,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Iterator.h" />
+    <ClInclude Include="Monom.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
