--- a/SirotinD/mp2-lab4-Polynoms/Polynoms/Polynoms/Polynoms.vcxproj.filters
+++ b/SirotinD/mp2-lab4-Polynoms/Polynoms/Polynoms/Polynoms.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Monom.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Polynom.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
